<resources>
    <string name="app_name">Boom Timer</string>
    <string name="start_game">Start Game!</string>
    <string name="player_label">Players:</string>
    <string name="rounds_3">3 Rounds</string>
    <string name="rounds_5">5 Rounds</string>
    <string name="round_label">Round:</string>
    <string name="hostage_label">Hostages:</string>
    <string name="pause_timer">Pause</string>
    <string name="resume_timer">Resume</string>
    <string name="next_round">Start Next Round</string>

    <string name="timer_running_notification_title_template">Timer running: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="timer_running_notification_placeholder_text_template">You said %1$s and lorem
        ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit
        vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
