<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:orientation="vertical"
    tools:context="com.example.jack.boomtimer.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/player_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/player_label"
            android:textColor="@android:color/background_light" />

        <NumberPicker
            android:id="@+id/player_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/player_label"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rounds_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rounds_3" />

            <RadioButton
                android:id="@+id/rounds_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rounds_5" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/start_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="50dp"
            android:text="@string/start_game"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>
